[package]
name = "blue-medisana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1.22.0", features = ["rt", "sync", "full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
rand = "0.8.5"
pretty_env_logger = "0.4.0"
serde_json = "1.0.89"
futures = "0.3.25"
uuid = "1.2.2"
